# minisiakad-GUI

./: .gitignore  CMakeLists.txt  common.cpp  common.h  index.html  mainadmin.cpp  mainadmin.h  mainadmin.ui  maindosen.cpp  maindosen.h  maindosen.ui  mainmahasiswa.cpp  mainmahasiswa.h  mainmahasiswa.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  package-lock.json  package.json
src/: App.jsx
src/Pages/: Landing.jsx  Login.jsx  Register.jsx
src/Pages/Dosen/: Absensi.jsx  AccKRS.jsx  Dashboard.module.css  DashboardDosen.jsx  InputNilai.jsx  NavbarDosen.jsx  NavbarDosen.module.css  TambahTugas.jsx
src/Pages/Dosen/styles/: absensi.css  acckrs.css  inputnilai.css  profildosen.css  tambahtugas.css
src/Pages/Mahasiswa/: Dashboard.jsx  DashboardMahasiswa.jsx  FormKRS.jsx  JadwalKuliah.jsx  KHS.jsx  NavbarMHS.module.css  NavbarMahasiswa.jsx  PengumpulanTugas.jsx  ProfilMahasiswa.jsx  predict.jsx
src/styles/: responsive.css  style-Regis-Login.css
